<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PaymentFragment">

    <View
        android:id="@+id/backgroun_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_card_top"
        app:layout_constraintBottom_toBottomOf="@+id/guide_header"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_backward"
        app:title="@string/pagamento"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foto"
            tools:ignore="ContentDescription" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        style="@style/Widget.DHWallet.SearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:defaultQueryHint="@string/search_hint"
        app:layout_constraintBottom_toBottomOf="@+id/guide_header"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="223dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/icon_luz"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="33dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_luz"
        app:layout_constraintEnd_toStartOf="@+id/icon_agua"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/backgroun_header"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/payment_luz"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/luz"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="@+id/icon_luz"
        app:layout_constraintStart_toStartOf="@+id/icon_luz"
        app:layout_constraintTop_toBottomOf="@+id/icon_luz" />

    <ImageView
        android:id="@+id/icon_agua"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="33dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_agua"
        app:layout_constraintEnd_toStartOf="@+id/icon_internet"
        app:layout_constraintStart_toEndOf="@+id/icon_luz"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/backgroun_header"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/payment_agua"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/agua"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/icon_agua"
        app:layout_constraintStart_toStartOf="@+id/icon_agua"
        app:layout_constraintTop_toBottomOf="@+id/icon_agua" />

    <ImageView
        android:id="@+id/icon_internet"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="33dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_internet"
        app:layout_constraintEnd_toStartOf="@+id/icon_payment"
        app:layout_constraintStart_toEndOf="@+id/icon_agua"
        app:layout_constraintTop_toBottomOf="@+id/backgroun_header"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/payment_internet"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/internet"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/icon_internet"
        app:layout_constraintStart_toStartOf="@+id/icon_internet"
        app:layout_constraintTop_toBottomOf="@+id/icon_internet" />

    <ImageView
        android:id="@+id/icon_payment"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="33dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_payment"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/icon_internet"
        app:layout_constraintTop_toBottomOf="@+id/backgroun_header"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/payment_pagamento"
        style="@style/Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/pagamento"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/icon_payment"
        app:layout_constraintStart_toStartOf="@+id/icon_payment"
        app:layout_constraintTop_toBottomOf="@+id/icon_payment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPayment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="33dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_luz"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="10"
        tools:layout_editor_absoluteX="45dp"
        tools:listitem="@layout/item_payment" />

    <Button
        android:id="@+id/btn_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_botao"
        android:backgroundTint="@color/violet"
        android:drawableLeft="@drawable/icon_qrcode"
        android:drawablePadding="25dp"
        android:text="@string/ler_c_digo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>

